[package]
name = "grant-dao"
version = "0.1.0"
authors = ["Coreum"]
edition = "2018"

exclude = [
    "grant-dao.wasm",
    "checksums.txt",
]

[lib]
crate-type = ["cdylib", "rlib"]

[profile.release]
opt-level = 3
debug = false
rpath = false
lto = true
debug-assertions = false
codegen-units = 1
panic = 'abort'
incremental = false
overflow-checks = true

[features]
backtraces = ["cosmwasm-std/backtraces"]
library = []

[dependencies]
cosmwasm-schema = "1.5.3"
cosmwasm-std = "1.5.3"
cosmwasm-storage = "1.5.2"
cw-storage-plus = "1.2.0"
cw2 = "1.1.2"
schemars = "0.8.15"
serde = { version = "1.0.197", default-features = false, features = ["derive"] }
thiserror = "1.0.58"

[dev-dependencies]
cw-multi-test = "1.0.0"
